@@ -1,42 +1,43 @@
 package ar.com.mercadolibre.socialmeli.util;
 
+import ar.com.mercadolibre.socialmeli.dto.response.ProductResponseDTO;
 import ar.com.mercadolibre.socialmeli.entity.Post;
 import ar.com.mercadolibre.socialmeli.entity.Product;
 import ar.com.mercadolibre.socialmeli.entity.User;
+import ar.com.mercadolibre.socialmeli.utils.Utils;
 
 import java.time.LocalDate;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
-public class UtilTest {
+public class TestUtils {
 
+    public static User createUsersWithPost() {
+        Post post = new Post();
+        post.setPostId(1);
+        post.setDate(LocalDate.now().minusDays(1));
+        post.setProduct(Utils.changeDtoToEntity(new ProductResponseDTO(), Product.class));
+        post.setCategory(1);
+        post.setPrice(100.0);
 
-    public static List<User> createUsers() {
-        User user1 = new User();
-        user1.setUserId(1);
-        user1.setUserName("Delfina");
-        user1.setFollowedIds(List.of(2));
-        user1.setPosts(Arrays.asList(post1, post2));
+        User user = new User();
+        user.setUserId(1);
+        user.setFollowedIds(Arrays.asList(2, 3));
+        user.setPosts(Collections.singletonList(post));
 
-        User user2 = new User();
-        user2.setUserId(2);
-        user2.setUserName("Fernando");
-        user2.setFollowedIds(List.of(3, 4));
-        user2.setPosts(Collections.singletonList(post3));
+        return user;
+    }
 
-        User user3 = new User();
-        user3.setUserId(3);
-        user3.setUserName("Emilia");
-        user3.setFollowedIds(List.of(2));
-        user3.setPosts(List.of(post4));
+    public static User createUserWithFollowed() {
 
-        User user4 = new User();
-        user4.setUserId(4);
-        user4.setUserName("Stephanie");
-        user4.setPosts(List.of(post4));
-
-        return Arrays.asList(user1, user2, user3, user4);
+        User user = new User(1, "Maria");
+        List<Integer> followed= new ArrayList<>();
+        followed.add(1);
+        followed.add(2);
+        user.setFollowedIds(followed);
+        return user;
     }
 
     public static List<User> createUsersWithPosts() {
@@ -61,16 +62,15 @@ public class UtilTest {
         // User 2 tiene 1 post
         User user2 = new User();
         user2.setUserId(2);
-        user2.setFollowedIds(Collections.singletonList(3)); // <--
+        user2.setFollowedIds(Collections.singletonList(3));
         user2.setPosts(Collections.singletonList(post3));
 
 
         User user3 = new User();
         user3.setUserId(3);
-        user3.setFollowedIds(List.of(1)); // <--
+        user3.setFollowedIds(List.of(1));
         user2.setPosts(Collections.singletonList(post4));
 
         return Arrays.asList(user1, user2, user3);
-
     }
 }
